--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="#about">About</a></li>
     <li><a href="#">Project</a></li>
     <li><a href="#">Qualification</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="#">Contact us</a></li>
     </ul>
   </nav>
   <main class="main">
